[package]
name = "rope-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.58"
clap = { version = "3.2.14", features = ["derive"] }
nix = "0.24.2"
redis = { version = "0.21.5", features = ["aio", "tokio-comp"] }
tokio = { version = "1.20.0", features = ["full"] }
