[package]
name = "rope-bench"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
ansi_term = "0.12.1"
anyhow = "1.0.58"
clap = { version = "3.2.14", features = ["derive"] }
indoc = "1.0.6"
nix = "0.24.2"
rand = "0.8.5"
redis = { version = "0.21.5", features = ["aio", "tokio-comp"] }
tokio = { version = "1.20.0", features = ["full"] }
